--- a/package.json
+++ b/package.json
@@ -11,7 +11,9 @@
   },
   "dependencies": {
     "dotenv": "^16.0.1",
-    "express": "^4.18.1"
+    "express": "^4.18.1",
+    "mongoose": "^6.3.6",
+    "mongose": "^0.0.2-security"
   },
   "devDependencies": {
     "nodemon": "^2.0.16"
